feat(back): xp, crud tasks
